# course-copilot

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  schema.sql
.beads/: beads.left.jsonl  beads.left.meta.json  issues.jsonl
agents/: __init__.py  students.py  ta_roles.py  teacher_rlm.py
apps/: __init__.py
ccopilot/: __init__.py
config/: constraints.example.yaml  constraints.yaml  course_config.example.yaml  course_config.yaml  model_config.example.yaml  model_config.yaml  pipeline.yaml  rubrics.yaml  scientific_config.yaml
docs/: ARCHITECTURE.md  DEMO_RUNBOOK.md  PLAN.md  PoC.md  WORLD_MODEL_TOOLING.md
evals/: checklists.yaml  rubrics.yaml
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
history/: 2025-11-11-chartreusestone-plan.md  2025-11-11-redhill-ccopilot-syy-plan.md  2025-11-12-blackdog-1xf-plan.md  2025-11-12-blackdog-2ka-plan.md  2025-11-12-blackdog-84h-plan.md  2025-11-12-blackdog-a6m-plan.md  2025-11-12-blackdog-abu-plan.md  2025-11-12-blackdog-ho3-plan.md  2025-11-12-blackdog-igi-plan.md  2025-11-12-blackdog-qbh-plan.md  2025-11-12-blackdog-yuy-plan.md  2025-11-12-blackhill-9wk-plan.md  2025-11-12-blackhill-j6t-plan.md  2025-11-12-blackhill-u7y-plan.md  2025-11-12-bluecastle-5fr-plan.md  2025-11-12-bluecastle-plan.md  2025-11-12-bluecastle-u7y-portal.md  2025-11-12-chartreusecastle-0ky-plan.md  2025-11-12-chartreusecastle-rz1-plan.md  2025-11-12-chartreusecastle-s2c-plan.md  2025-11-12-fuchsiapond-yuy-plan.md  2025-11-12-fuchsiastone-bpi.md  (+78 more)
outputs/: course_plan.md  (+2 more)
(+173 files in other folders)
